--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/png" href="https://cdn2.steamgriddb.com/icon_thumb/b9d0cdbab65a298d077a7b9794f97cd5.png" sizes="32x32">
 </head>
 <body>
+    <center>
     <canvas id="GameCanvas" width="640" height="480"></canvas>
+    </center>
 </body>
 </html>
