Change title from 'Insaniquarium!' to 'Insaniquarium!.js'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insaniquarium!</title>
+    <title>Insaniquarium!.js</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://cdn2.steamgriddb.com/icon_thumb/b9d0cdbab65a298d077a7b9794f97cd5.png" sizes="32x32">
 </head>
