--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Insaniquarium!.js</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://cdn2.steamgriddb.com/icon_thumb/b9d0cdbab65a298d077a7b9794f97cd5.png" sizes="32x32">
+    <script src="./js/canvas.js"></script>
 </head>
 <body>
     <center>
